force-app/main/default/objects/Panel_Member__c/Panel_Member__c.object-meta.xml
<CustomObject>
    <label>Panel Member</label>
    <nameField>
        <label>Panel Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Panel Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>