force-app/main/default/objects/Panel_Member__c/fields/Last_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Date__c</fullName>
    <label>Last Survey Date</label>
    <type>DateTime</type>
</CustomField>